2011-05-06  Sergio Martin <sergio.martin@artica.es>

	* operation/incidents/incident.php: Fixed enabled details
	tab in incidents when no incident is selected (now disabled)

2011-05-05  Sergio Martin <sergio.martin@artica.es>

	* operation/incidents/incident.php
	operation/companies/company_detail.php: Fixed acces to 
	incident through GET

2011-05-04  Sancho Lerena <slerena@artica.es>

    * setup_visual.php: Removed token from here.

    * usuarios/configurar_usuarios.php: Fixed code who makes this not
    working in languages not english :-(

    * include/functions_incidents.php: Implemented code to send email
    notifications to any incindent reporter subscribed to incident.

    * include/gettext.php: Using code from pandora, this doesnt work 
    on 64bit systems :-S... not tested in Windows enviroments.

    * operation/side_menu.php: Disabling options for update manager until
    be properly implemented using code from Pandora 3.x (no pear deps)

    * operation/incidents/incident_detail.php: Showing incident reporters.

	* operation/incidents/incident_attach_file.php: Added description
	about files not valid (source code) as attach.

2011-05-03  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_gd.php
	include/graphs/fgraph.php
	include/functions_incidents.php: Changed the legend of
	the pie chart of most active incidents in stats. 
	Fixed flash chart graphs into incident stats

2011-05-03  Sergio Martin <sergio.martin@artica.es>

	* operation/incidents/incident.php
	operation/incidents/incident_search.php: Fixed statistics
	tab issues. Updated of side menu when go into incident details.
	Deleted incident id link into incident lists to avoid bugs with
	the keep of filter parameters.

2011-05-03  Sergio Martin <sergio.martin@artica.es>

	* include/functions_graph.php
	include/graphs/functions_gd.php
	include/config.inc.php
	include/functions_config.php: Fixed font pass
	to progress bars and clean unecessary fontpath 