@@ -41,6 +41,11 @@ if (dame_admin ($config['id_user']))
 else
 	echo '<img src="images/user_green.png"> ';
 echo __('You are connected as').' <span style="font-wieght: bold; color: #ffffff"">['.$config['id_user'].']</span></a>';
+
+//// This div is necessary for javascript actions. Dont touch ///
+echo '<div id="id_user" value="dd">'.$config['id_user'].'</div>';
+/////////////////////////////////////////////////////////////////
+
 echo '&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;';
 echo '<a href="index.php?logout=1"><img src="images/lock.png"> '. __('Logout').'</a>';
 
