@@ -1,5 +1,11 @@
 2011-05-06  Sergio Martin <sergio.martin@artica.es>
 
+	* include/js/integria_incident_search.js
+	general/header.php: Fixed limit of incidents by group
+	for users
+
+2011-05-06  Sergio Martin <sergio.martin@artica.es>
+
 	* operation/incidents/incident.php: Fixed enabled details
 	tab in incidents when no incident is selected (now disabled)
 
